fix z-index

--- a/music-player.css
+++ b/music-player.css
@@ -12,6 +12,7 @@
     box-shadow: 0 0 15px rgba(var(--primary-color), 0.5);
     backdrop-filter: blur(4px);
     transition: all 400ms ease;
+    z-index: 50;
 }
 
 .muspla:has(input[type="checkbox"]:not(:checked)) {
